# maybe

./: .env.example  .env.nas.example  .gitignore  Dockerfile  PROJECT_SUMMARY.md  check_translations.sh  compose.example.yml  compose.local.yml
app/controllers/: family_exports_controller.rb  family_merchants_controller.rb  pages_controller.rb  properties_controller.rb
app/helpers/: custom_confirm.rb  languages_helper.rb  settings_helper.rb
app/jobs/: sync_prices_job.rb
app/models/: account.rb  category.rb  crypto.rb  holding.rb  period.rb  security.rb
config/: currencies.yml  currency_fallbacks.yml  routes.rb  schedule.yml
config/environments/: production.rb
config/initializers/: active_storage.rb  exchange_rate_cache.rb  (+1 more)
db/: create_categories.sql
docs/: config-architecture.md  mem0-architecture.md  memory-architecture-summary.md
lib/: money.rb
tools/datahub/: .gitignore  FINAL_TEST_REPORT.md  README.md  SKILL.md  cli.py  pyproject.toml
tools/datahub/config/: sources.yaml
tools/datahub/datahub/: __init__.py  cli.py
tools/datahub/datahub/config/: __init__.py  sources.yaml
tools/datahub/datahub/core/: __init__.py  base_source.py  history_store.py  market_data_syncer.py  maybe_db_writer.py  priority_scheduler.py  source_registry.py
tools/datahub/datahub/sources/: __init__.py  newsapi_source.py  rss_source.py  yfinance_source.py
tools/datahub/docs/: yfinance-optimization-design.md
tools/datahub/tests/: run_all_phase1_tests.py  test_01_dataitem_basic.py  test_02_dataitem_to_dict.py  test_03_dataitem_generate_id.py  test_04_dataitem_special_chars.py  test_05_validation_result.py  test_06_data_source_result.py  test_07_rss_init.py  test_07_rss_source_basic.py  test_08_rss_parse_entry.py  test_09_rss_parse_date.py  test_10_rss_validate.py  test_11_rss_fetch.py  test_12_16_yfinance_source.py  test_12_rss_source.py  test_17_22_source_registry.py  test_basic.py  test_datahub_fixes.py  test_dataitem_simple.py  test_datetime.py  test_feedparser_import.py  test_newsapi_source.py  test_phase1_unit.py  test_phase2_integration.py  test_rss_import_debug.py
tools/maybe-cli/: README.md  pyproject.toml
tools/maybe-cli/maybe_cli/: __init__.py  cli.py  client.py  daily_sync.py  portfolio.py  yf.py
tools/maybe-cli/tests/: test_audit_capture.py  test_portfolio.py  test_write_guards.py
tools/mem0-memory/: cleanup_system_config.py  pyproject.toml  recategorize_memories.py
tools/mem0-memory/mem0_memory/: __init__.py  cli.py  client.py  migrator.py
tools/mem0-memory/mem0_memory/config/: mem0.yaml
tools/mem0-memory/tests/: scenarios.md  test_category_validation.py  test_client.py  test_review.py
(+274 files in other folders)
