[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "datahub"
version = "1.0.0"
description = "A flexible data source management system for RSS and Yahoo Finance data"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "feedparser>=6.0.0",
    "yfinance>=0.2.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "psycopg2-binary>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
datahub-cli = "datahub.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["datahub*"]

[tool.setuptools.package-data]
"datahub.config" = ["*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
