[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mem0-memory"
version = "0.1.0"
description = "Structured memory management for Maybe Finance using Mem0"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "mem0ai>=0.1.0",
    "pyyaml>=6.0",
    "httpx>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
memory = "mem0_memory.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["mem0_memory*"]

[tool.setuptools.package-data]
"mem0_memory" = ["config/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
